--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,8 +14,9 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
+          <li><a href="#activities">Activities</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -31,24 +31,25 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
+          <li><a href="#activities" onclick="toggleMenu()">Activities</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Profile Picture" />
+        <img src="./assets/profile-pic.png" alt="" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Kevin McCarthy</h1>
-        <p class="section__text__p2">Cybersecurity Student at RIT</p>
+        <p class="section__text__p2">Cybersecurity Student @ RIT</p>
         <div class="btn-container">
             <!-- Add Updated Resume When Applicable -->
-          <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button> 
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+          <button class="btn btn-color" onclick="window.open('./assets/kdm-resume.pdf')">Resume</button> 
+          <button class="btn btn-color" onclick="location.href='./#contact'">Contact Info</button>
         </div>
         <div id="socials-container">
           <img src="./assets/linkedin.png" alt="LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/kev-mac/'"/>
@@ -60,17 +61,17 @@
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img src="./assets/about-pic2.png" alt="Profile picture" class="about-pic"/>
+          <img src="./assets/about-pic2.png" alt="" class="about-pic"/>
         </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img src="./assets/skills.png" alt="skills icon" class="icon"/>
-              <h3>Expertise</h3>
+              <img src="./assets/skills.png" alt="" class="icon"/>
+              <h3>Working Knowledge</h3>
               <p>Incident Response, Digital Forensics, Ethical Hacking, and Network Security </p>
             </div>
             <div class="details-container">
-              <img src="./assets/education.png" alt="Education icon" class="icon" />
+              <img src="./assets/education.png" alt="" class="icon" />
               <h3>Education</h3>
               <p>Bachelors of Science in Cybersecurity<br />Minor in System Administration</p>
             </div>
@@ -89,107 +90,117 @@
       </div>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#skills'"/>
     </section>
-    <section id="skills">
-      <h1 class="title">Skills</h1>
-      <div class="skills-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="skills-sub-title">Coding Languages</h2>
-            <div class="article-container">
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>Python</h3> </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>Java</h3> </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>C/C++</h3> </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>Powershell</h3> </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>Bash</h3> </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>MySQL</h3> </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="skills icon" class="icon"/>
-                <div> <h3>x86 Assembly</h3> </div>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
-      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
-    </section>
-    <section id="projects">
-      <h1 class="title">Projects</h1>
+    <section id="activities">
+      <h1 class="title">Activities</h1>
       <div class="skills-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./assets/project-1.png" alt="Project 1" class="project-img"/>
+              <img src="./assets/activity-1.png" alt="" class="project-img"/>
             </div>
-            <h2 class="skills-sub-title project-title">Project One</h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'"> Github</button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'"> Live Demo </button>
-            </div>
+            <h2 class="skills-sub-title project-title">Activity One</h2>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
+              <img src="./assets/activity-2.png" alt="" class="project-img"/>
             </div>
-            <h2 class="skills-sub-title project-title">Project Two</h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'"> Github </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'"> Live Demo </button>
-            </div>
+            <h2 class="skills-sub-title project-title">Activity Two</h2>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./assets/project-3.png" alt="Project 3" class="project-img"/>
+              <img src="./assets/activity-3.png" alt="" class="project-img"/>
             </div>
-            <h2 class="skills-sub-title project-title">Project Three</h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'"> Github </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'"> Live Demo </button>
-            </div>
+            <h2 class="skills-sub-title project-title">Activity Three</h2>
+            <!-- <div class="btn-container">
+                <button class="btn btn-color project-btn" onclick="location.href='https://github.com/'"> Github</button>
+            </div> -->
           </div>
         </div>
       </div>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
     </section>
+    <section id="projects">
+        <h1 class="title">Projects</h1>
+        <div class="skills-details-container">
+          <div class="about-containers">
+            <div class="details-container color-container">
+              <div class="project-image-container">
+                <img src="./assets/digital-forensics.png" alt=""class="project-img"/>
+              </div>
+              <h2 class="skills-sub-title project-title">Project One</h2>
+              <p class="project-description">
+                A brief description of Project One goes here. This could highlight the main features or technologies used.
+              </p>
+              <div class="btn-container project-links">
+                <button class="btn btn-color project-btn" onclick="location.href='https://github.com/'"> Github </button>
+                <button class="btn btn-color project-btn" onclick="location.href='https://livedemo.com/'"> Live Demo </button>
+                </div>
+            </div>
+          </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
+      </section>
+    <section id="skills">
+        <h1 class="title">Skills</h1>
+        <div class="skills-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <h2 class="skills-sub-title">Coding Languages</h2>
+              <div class="article-container">
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>Python</h3> </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>Java</h3> </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>C/C++</h3> </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>Powershell</h3> </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>Bash</h3> </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>MySQL</h3> </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="" class="icon"/>
+                  <div> <h3>x86 Assembly</h3> </div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+      </section>
     <section id="contact">
       <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
+          <img src="./assets/email.png" alt=""class="icon contact-icon email-icon"/>
           <p><a href="mailto:kdmcyber00@gmail.com">kdmcyber00@gmail.com</a></p>
     </section>
     <footer>
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
+            <li><a href="#top">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
+            <li><a href="#activities">Activities</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#skills">Skills</a></li>
           </ul>
         </div>
       </nav>
+      <p>Copyright &#169; 2025 Kevin McCarthy</p>
     </footer>
     <script src="script.js"></script>
   </body>
