--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis reprehenderit et laborum, rem,
-                        dolore eum quod voluptate exercitationem nobis, nihil esse debitis maxime facere minus sint
-                        delectus velit in eos quo officiis explicabo deleniti dignissimos. Eligendi illum libero dolorum
-                        cum laboriosam corrupti quidem, reiciendis ea magnam? Nulla, impedit fuga!
+                      Actively seeking 2025 co-op opportunities in Cybersecurity and Networking, I am a focused 
+                      and driven second-year Cybersecurity student at Rochester Institute of Technology (RIT), 
+                      eager to expand upon my foundational knowledge through practical, hands-on experience. 
+                      Flexible to adjust availability to meet organizational needs.
                     </p>
                 </div>
             </div>
@@ -105,23 +105,30 @@
     <section id="activities">
       <h1 class="title">Activities</h1>
       <div class="about-containers">
-          <div class="details-container color-container">
-              <div class="article-container">
-                  <img src="./assets/activity-1.png" alt="" class="project-img"/>
-              </div>
+          <div class="details-container">
+              <div class="article-container"><img src="./assets/ritsec-logo.png" alt="" class="project-img"/></div>
               <h2 class="activities-sub-title">RITSEC</h2>
+              <p>
+                Active member of RIT's largest academic club. Focused on furthering cybersecurity development
+                the club aims to foster "Security Through Community" with student-led education, research, 
+                interest groups, and renowned competitions including IRSeC, ISTS, and RITSEC CTF, attracting global talent.
+              </p>
           </div>
           <div class="details-container color-container">
-              <div class="article-container">
-                  <img src="./assets/activity-2.png" alt="" class="project-img"/>
-              </div>
-              <h2 class="activities-sub-title">Activity Two</h2>
+              <div class="article-container"><img src="./assets/activity-2.png" alt="" class="project-img"/></div>
+              <h2 class="activities-sub-title">Cybersecurity Competitions</h2>
+              <p>
+                A brief description of Project One goes here. This could highlight the main features or technologies
+                used.
+              </p>
           </div>
           <div class="details-container color-container">
-              <div class="article-container">
-                  <img src="./assets/activity-3.png" alt="" class="project-img"/>
-              </div>
-              <h2 class="activities-sub-title">Activity Three</h2>
+              <div class="article-container"><img src="./assets/activity-3.png" alt="" class="project-img"/></div>
+              <h2 class="activities-sub-title">Rock Climbing Club</h2>
+              <p>
+                A brief description of Project One goes here. This could highlight the main features or technologies
+                used.
+              </p>
           </div>
       </div>
   </section>
@@ -129,10 +136,10 @@
     <!-- Projects Section -->
     <section id="projects">
         <h1 class="title">Projects</h1>
-        <div class="details-container color-container">
+        <div class="details-container project-container">
             <img src="./assets/digital-forensics.png" alt="" class="project-img" />
             <div class="project-card-container">
-                <h2 class="project-sub-title project-title">Project One</h2>
+                <h2 class="project-sub-title project-title">Digital Forensics Case Study</h2>
                 <p class="project-description">
                     A brief description of Project One goes here. This could highlight the main features or technologies
                     used.
@@ -143,14 +150,21 @@
                 </div>
             </div>
         </div>
+      </div>
     </section>
 
     <!-- Skills Section -->
     <section id="skills">
-        <h1 class="title">Skills</h1>
-        <div class="details-container">
-            <h2 class="skills-sub-title">Coding Languages</h2>
-            <div class="article-container">
+      <h1 class="title">Skills</h1>
+      <div class="about-containers">
+          <div class="details-container">
+            <h3 class="skills-sub-title">Operating Systems</h3>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Windows</div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Unix/Linux</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>pfSense</h3></div></article>
+          </div>
+          <div class="details-container color-container">
+              <h2 class="skills-sub-title">Coding Languages</h2>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Python</h3></div></article>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Java</h3></div></article>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>C/C++</h3></div></article>
@@ -158,9 +172,26 @@
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Bash</h3></div></article>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>MySQL</h3></div></article>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>x86 Assembly</h3></div></article>
-            </div>
+          </div>
+          <div class="details-container color-container">
+            <h2 class="skills-sub-title">System Administration</h2>
+            <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Virtual Machines</h3></div></article>
+            <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Wireshark</h3></div></article>
+            <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Active Directory</h3></div></article>
+            <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Firewalls</h3></div></article>
+ 
         </div>
-    </section>
+          <div class="details-container color-container">
+              <h2 class="skills-sub-title">Cybersecurity Tools</h2>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Git/Github</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Metasploit</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Nmap</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Data Dog</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Autopsy</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Ghidra</h3></div></article>
+          </div>
+      </div>
+  </section>
 
     <!-- Contact Section -->
     <section id="contact">
