Improved Header + Better Mobile Support

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="menu-links">
                 <ul>
+                    <li><a href="#top" onclick="toggleMenu()">Home</a></li>
                     <li><a href="#about" onclick="toggleMenu()">About</a></li>
                     <li><a href="#activities" onclick="toggleMenu()">Activities</a></li>
                     <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                     <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
-                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -53,8 +53,9 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Kevin McCarthy</h1>
-            <p class="section__text__p2">Cybersecurity Student</p>
+            <p class="section__text__p2">Cybersecurity Student @ RIT</p>
             <div class="btn-container">
+                <!-- Update Resume When Necessary -->
                 <button class="btn btn-color" onclick="window.open('./assets/kdm-resume.pdf')">Resume</button>
                 <button class="btn btn-color" onclick="location.href='./#contact'">Contact Info</button>
             </div>
@@ -91,10 +92,9 @@
                 </div>
                 <div class="text-container">
                     <p>
-                      Actively seeking 2025 co-op opportunities in Cybersecurity and Networking, I am a focused 
-                      and driven second-year Cybersecurity student at Rochester Institute of Technology (RIT), 
-                      eager to expand upon my foundational knowledge through practical, hands-on experience. 
-                      Flexible to adjust availability to meet organizational needs.
+                        Focused and driven second-year Cybersecurity student actively seeking 2025 co-op opportunities 
+                        in both Cybersecurity and Networking fields. Eager to expand upon current foundational knowledge 
+                        through practical, hands-on experience. Flexible to adjust availability to meet organizational needs.
                     </p>
                 </div>
             </div>
@@ -106,28 +106,33 @@
       <h1 class="title">Activities</h1>
       <div class="about-containers">
           <div class="details-container">
-              <div class="article-container"><img src="./assets/ritsec-logo.png" alt="" class="project-img"/></div>
+              <div class="article-container"><img src="./assets/ritsec-logo.png" alt="" class="activities-img"/></div>
               <h2 class="activities-sub-title">RITSEC</h2>
               <p>
-                Active member of RIT's largest academic club. Focused on furthering cybersecurity development
-                the club aims to foster "Security Through Community" with student-led education, research, 
-                interest groups, and renowned competitions including IRSeC, ISTS, and RITSEC CTF, attracting global talent.
+                Active member of RIT's largest academic club. Focused on furthering student's cybersecurity development
+                according to their motto "Security Through Community" with student-led efforts including education, research, 
+                interest groups, and renowned competitions such as IRSeC, ISTS, and RITSEC CTF, attracting global talent.
               </p>
           </div>
+
           <div class="details-container color-container">
-              <div class="article-container"><img src="./assets/activity-2.png" alt="" class="project-img"/></div>
-              <h2 class="activities-sub-title">Cybersecurity Competitions</h2>
+              <div class="article-container"><img src="./assets/cyber-comps.png" alt="" class="activities-img"/></div>
+              <h2 class="activities-sub-title">Cyber Competitions</h2>
               <p>
-                A brief description of Project One goes here. This could highlight the main features or technologies
-                used.
+                Demonstrated skills in incident response and penetration testing through competitive events, including 
+                2nd place finishes in University of Buffalo Lockdown and CORA II. Additionally collaborated on RIT 
+                competition development, contributing to competition logging and King of the Hill (KoTH) challenge design 
+                and implementation.
               </p>
           </div>
+
           <div class="details-container color-container">
-              <div class="article-container"><img src="./assets/activity-3.png" alt="" class="project-img"/></div>
+              <div class="article-container"><img src="./assets/rock-climbing.png" alt="" class="activities-img"/></div>
               <h2 class="activities-sub-title">Rock Climbing Club</h2>
               <p>
-                A brief description of Project One goes here. This could highlight the main features or technologies
-                used.
+                Dedicated indoor boulderer who has developed valuable skills in strategic thinking, risk management, 
+                and perseverance through progressively difficult climbs. Proven ability to set realistic goals, 
+                adapt to dynamic situations, and work effectively both independently and in group settings.
               </p>
           </div>
       </div>
@@ -163,6 +168,7 @@
               <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Unix/Linux</h3></div></article>
               <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>pfSense</h3></div></article>
           </div>
+
           <div class="details-container color-container">
               <h2 class="skills-sub-title">Coding Languages</h2>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Python</h3></div></article>
@@ -173,17 +179,21 @@
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>MySQL</h3></div></article>
                 <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>x86 Assembly</h3></div></article>
           </div>
+
           <div class="details-container color-container">
             <h2 class="skills-sub-title">System Administration</h2>
             <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Virtual Machines</h3></div></article>
             <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Wireshark</h3></div></article>
+            <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>PuTTY</h3></div></article>
             <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Active Directory</h3></div></article>
             <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Firewalls</h3></div></article>
- 
+            <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>OpenSSH</h3></div></article>
+            
         </div>
           <div class="details-container color-container">
               <h2 class="skills-sub-title">Cybersecurity Tools</h2>
               <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Git/Github</h3></div></article>
+              <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Visual Studio/VSCode</h3></div></article>
               <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Metasploit</h3></div></article>
               <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Nmap</h3></div></article>
               <article><img src="./assets/checkmark.png" alt="" class="icon" /><div><h3>Data Dog</h3></div></article>
